--- a/lib/fribidi/libfridibidi/libfridibidi.vcxproj
+++ b/lib/fribidi/libfridibidi/libfridibidi.vcxproj
@@ -46,7 +46,7 @@
     <ClCompile>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>..\;.;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;_CRT_NONSTDC_NO_DEPRECATE%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -62,7 +62,7 @@
       <Optimization>MaxSpeed</Optimization>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <AdditionalIncludeDirectories>..\;.;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;_CRT_NONSTDC_NO_DEPRECATE%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <PrecompiledHeader>
@@ -74,7 +74,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\fribidi.c" />
-    <ClCompile Include="..\fribidi_bidi_types.c" />
     <ClCompile Include="..\fribidi_char_sets.c" />
     <ClCompile Include="..\fribidi_char_sets_cap_rtl.c" />
     <ClCompile Include="..\fribidi_char_sets_cp1255.c" />
@@ -84,9 +83,7 @@
     <ClCompile Include="..\fribidi_char_sets_iso8859_8.c" />
     <ClCompile Include="..\fribidi_char_sets_utf8.c" />
     <ClCompile Include="..\fribidi_char_type.c" />
-    <ClCompile Include="..\fribidi_create_char_types.c" />
     <ClCompile Include="..\fribidi_create_mirroring.c" />
-    <ClCompile Include="..\fribidi_main.c" />
     <ClCompile Include="..\fribidi_mem.c" />
     <ClCompile Include="..\fribidi_mirroring.c" />
     <ClCompile Include="..\fribidi_types.c" />
